objects/canteen__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>cateens</relationshipLabel>
        <relationshipName>cateens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bill__c</fullName>
        <label>Total Bill</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>account_numner__c</fullName>
        <displayFormat>s-{0000}</displayFormat>
        <label>account numner</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>due_amount__c</fullName>
        <formula>Total_Bill__c  -  paid_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>due amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <label>paid amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>canteen</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cateens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>